# repox

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
repox-manifest/: Cargo.toml
repox-manifest/src/: include.rs  lib.rs  project.rs  remove_project.rs  repo_hooks.rs
repox-manifest/src/snapshots/: repox_manifest__tests__serialized_sample.snap
samples/: imx-6.1.1-1.0.0.xml
src/: lib.rs  main.rs
src/command/: diff.rs  download.rs  for_all.rs  init.rs  mod.rs  prune.rs  start.rs  status.rs  sync.rs  upload.rs
src/manifest/: default.rs  extend_project.rs  manifest_server.rs  mod.rs  notice.rs  remote.rs
src/manifest/snapshots/: repox__manifest__tests__serialized_sample.snap
