[package]
name = "repox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
gix = { version = "0.63.0", features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
] }
miette = { version = "7.2.0", features = ["fancy"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
rayon = "1.7.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
repox-manifest = { path = "repox-manifest" }

[workspace]
members = ["repox-manifest"]
